# symphony

./: Cargo.toml
.github/workflows/: ci.yaml
look/: Cargo.toml
look/src/: lib.rs  wrapped_network.rs
look/src/sampler/: mixer.rs  mod.rs  oscillator.rs
symphony/: Cargo.toml
symphony/src/: lib.rs  main.rs  symphony.rs
symphony/src/symphony/: mod.rs  settings.rs
symphony/src/window/: mixer.rs  mod.rs  settings.rs
vitamin/: Cargo.toml
vitamin/src/: lib.rs  message.rs  mixer.rs  network.rs  oscillator.rs
vitamin/src/sampler/: mixer.rs  mod.rs  oscillator.rs
