[package]
name = "symphony"
version = "0.0.0-git"
edition = "2021"

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
eframe = { version = "0.21", default-features = false, features = ["glow", "dark-light", "default_fonts"] }
clap = { version = "4.1", features = ["derive"] }
anyhow = "1.0"
cpal = "0.15"

vitamin = { path = "../vitamin" }