[package]
name = "symphony"
version = "0.0.0-git"
edition = "2021"

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
eframe = { version = "0.21", default-features = false, features = ["glow", "default_fonts"] }
clap = { version = "4.2", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
crossbeam-channel = "0.5"
anyhow = "1.0"
cpal = "0.15"

vitamin = { path = "../vitamin" }
look = { path = "../look" }